[package]
name = "rdb_tool"
version = "0.2.0"
authors = ["Raytwo <Raytwost@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "1.4"
binwrite = "0.2.1"
modular-bitfield = "0.10"
structopt = "0.3.20"